# llm-benchmarks

./: README.md  main.py  pyproject.toml
prompts/censorship/: 1  2  anthrax  molotov-cocktail  porn-star-poem
prompts/entropy/: 1
prompts/hallucinations/: cia-in-europe
prompts/programming/: 1  2
prompts/reasoning/: 1  4  biological-life  house-of-the-dragon  quantum-vs-newtonian-physics
